# Penguins

./: 169.254.245-metadata.json  CITATION.cff  README.md  run_camera_tests.sh  run_fake_odom_tests.sh  run_motor_tests.sh
example_workspace/install/: local_setup.sh  setup.sh
example_workspace/log/: latest_build
install/: local_setup.sh  setup.sh
install/fake_odometry_publisher/lib/fake_odometry_publisher/: fake_odometry_publisher
install/fake_odometry_publisher/share/fake_odometry_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_cpp_package/lib/my_cpp_package/: odometry_publisher
install/my_cpp_package/share/my_cpp_package/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav2_bringup/share/nav2_bringup/: local_setup.sh  package.sh
install/ouster_ros/lib/ouster_ros/: os_cloud  os_driver  os_image  os_replay  os_sensor
install/ouster_ros/share/ouster_ros/: local_setup.dsv  local_setup.sh  package.bash  package.sh  package.zsh
install/ouster_sensor_msgs/share/ouster_sensor_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rf2o_laser_odometry/share/rf2o_laser_odometry/: local_setup.sh  package.sh
install/slam_toolbox/lib/slam_toolbox/: async_slam_toolbox_node  lifelong_slam_toolbox_node  localization_slam_toolbox_node  merge_maps_kinematic  sync_slam_toolbox_node
install/slam_toolbox/share/karto_sdk/: local_setup.sh
install/slam_toolbox/share/slam_toolbox/: package.bash  package.sh  package.zsh
log/: latest_build  latest_test
sep_bot/: CMakeLists.txt  package.xml
sep_bot/config/: drive_bot.rviz  mapper_params_online_async.yaml  view_bot.rviz
sep_bot/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  radar.xacro  robot.urdf.xacro  robot_core.xacro
sep_bot/launch/: launch_sim.launch.py  rsp.launch.py
sep_bot/worlds/: divobstacles.world  obstacles.world
sep_bot/worlds/walls/: model.sdf
src/Fake_odometry/: CMakeLists.txt  package.xml
src/cam_driver/: package.xml  setup.cfg  setup.py
src/cam_driver/cam_driver/: cam_driver.py
src/cam_driver/lib/Linux64_ARM/: libIpxCTI.cti  libIpxCTI.cti.1  libIpxCTI.cti.1.5.0.63  libIpxCameraApi.so.1  libIpxCameraApi.so.1.5.0.63  libIpxCameraApiPy.so.1  libIpxCameraApiPy.so.1.5.0.63  libIpxCameraGuiApi.so.1  libIpxCameraGuiApi.so.1.5.0.63  libIpxCameraGuiApiPy.so.1  libIpxCameraGuiApiPy.so.1.5.0.63  libIpxDemosaicing.so.3  libIpxDemosaicing.so.3.3.0.55  libIpxDisplayQt.so.3  libIpxDisplayQt.so.3.3.0.55  libIpxImageApi.so.3  libIpxImageApi.so.3.3.0.55  libIpxMisc.so.3  (+13 more)
src/cam_driver/tests/: test_cam_driver.py  test_camera_poses.py  test_image_subscriber.py
src/cam_odom/: intrinsic.npy  package.xml  setup.cfg  setup.py
src/cam_odom/cam_odom/: cam_odom.py
src/cam_odom/test/: test_cam_odom.py
src/cv_basics/: package.xml  setup.py
src/cv_basics/cv_basics/: cam_driver.py  cam_odom.py  webcam_pub.py  webcam_sub.py
src/fake_odometry/: CMakeLists.txt  package.xml
src/fake_odometry/include/fake_odometry/: odometry_publisher.hpp
src/fake_odometry/src/: main.cpp  odometry_publisher.cpp
src/fake_odometry/test/: test_odometry_publisher.cpp
src/fake_odometry_publisher/fake_odometry_publisher/: package.xml  setup.cfg  setup.py
src/fake_odometry_publisher/fake_odometry_publisher/fake_odometry_publisher/: fake_odometry_publisher.py
src/motor_controller_pkg/: package.xml  setup.cfg  setup.py
src/motor_controller_pkg/launch/: motor_controller.launch.py
src/motor_controller_pkg/motor_controller_pkg/: keyboard_control.py  motor_controller.py
src/motor_controller_pkg/test/: test_keyboard_control.py  test_motor_controller.py
src/motor_controller_pkg/tests/: test_keyboard_control.py  test_motor_controller.py
src/my_cpp_package/src/: odometry_publisher.cpp
src/nav2_bringup/params/: nav2_params.yaml
src/slam_toolbox-foxy-devel/install/: setup.sh
src/umrr_ros2_driver/: CMakeLists.txt
src/umrr_ros2_driver/param/: radar.params.template.yaml
src/umrr_ros2_driver/smartmicro/: LICENSE_3rdParty.txt  changelog.md
src/umrr_ros2_driver/smartmicro/example/: CMakeLists.txt  build.bat  build.sh  linux-armv7hf-gcc.cmake  linux-armv8-gcc.cmake  linux-x86-gcc.cmake  linux-x86_64-gcc.cmake  smart_access_example.py  windows-x86_64-msvc.cmake
src/umrr_ros2_driver/smartmicro/example/OsalLinux/config/: hw_inventory.json
src/umrr_ros2_driver/smartmicro/example/OsalLinux/include/: HwInventory.h  OSALImpl.h
src/umrr_ros2_driver/smartmicro/example/OsalLinux/include/can/: CanIface.h
src/umrr_ros2_driver/smartmicro/example/OsalLinux/include/ethernet/: EthIface.h  MulticastIface.h  UdpIface.h  UnicastIface.h
src/umrr_ros2_driver/smartmicro/example/OsalLinux/include/rs485/: Rs485Iface.h
src/umrr_ros2_driver/smartmicro/example/OsalLinux/include/utils/: Utils.h
src/umrr_ros2_driver/smartmicro/example/OsalLinux/src/: HwInventory.cpp  OSALImpl.cpp
src/umrr_ros2_driver/smartmicro/example/OsalLinux/src/can/: CanIface.cpp
src/umrr_ros2_driver/smartmicro/example/OsalLinux/src/ethernet/: MulticastIface.cpp  UdpIface.cpp  UnicastIface.cpp
src/umrr_ros2_driver/smartmicro/example/OsalLinux/src/rs485/: Rs485Iface.cpp
src/umrr_ros2_driver/smartmicro/example/OsalLinux/src/utils/: Utils.cpp
src/umrr_ros2_driver/smartmicro/example/OsalWindows/include/: HwInstIfc.h  HwInventory.h  HwProperty.h  OSALImpl.h
src/umrr_ros2_driver/smartmicro/example/OsalWindows/include/eth/: EthIface.h  MulticastIface.h  UdpIface.h  UnicastIface.h
src/umrr_ros2_driver/smartmicro/example/OsalWindows/include/rs485/: Rs485Inst.h
src/umrr_ros2_driver/smartmicro/example/OsalWindows/src/: HwInventory.cpp  HwProperty.cpp  OSALImpl.cpp
src/umrr_ros2_driver/smartmicro/example/OsalWindows/src/eth/: MulticastIface.cpp  UdpIface.cpp  UnicastIface.cpp
src/umrr_ros2_driver/smartmicro/example/OsalWindows/src/rs485/: Rs485Inst.cpp
src/umrr_ros2_driver/smartmicro/example/src/: example_app.cpp
src/umrr_ros2_driver/src/: smartmicro_radar_node.cpp
src/umrr_ros2_msgs/srv/: SendCommand.srv
(+447 files in other folders)
