<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cam_odom</name>
  <version>1.0.0</version>
  <description>Contains implementation of camera odometry using images received from a specified ros topic and camera calibrition to calculate the extrinsic and intrinsic matrices for the connected camera</description>
  <maintainer email="t.r.e.rosendaal@student.tue.nl">Thomas Rosendaal</maintainer>
  <maintainer email="a.hussain@student.tue.nl">Abbas Hussain</maintainer>
  <maintainer email="d.gede.arya.divo.abimanyu@student.tue.nl">Gede Arya Divo Abimanyu</maintainer>
  <license>Apache License 2.0</license>
  
  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend> 
  <depend>numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
